Implemented calculate pop_up

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#41366E</color>
     <color name="colorAccent">#FF40B1</color>
     <color name="white">#FFFFFF</color>
-    <color name="tint">#475ABE</color>
+    <color name="gray">#8F8E8E</color>
+    <!--<color name="tint">#475ABE</color>-->
 </resources>
