--- a/app/src/main/res/layout/calculate_dialog.xml
+++ b/app/src/main/res/layout/calculate_dialog.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="20dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    tools:context=".CalculateActivity">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:padding="20sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
@@ -17,41 +17,38 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/oensansbold"
             android:text="@string/how_long_access"
             android:textAlignment="center"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.493"
+            app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/cal_btn"
-            android:layout_width="256dp"
-            android:layout_height="55dp"
-            android:layout_marginTop="100dp"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="24dp"
             android:background="@drawable/button"
             android:elevation="2dp"
             android:text="Calculate"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="@+id/num_picker"
-            app:layout_constraintHorizontal_bias="0.444"
             app:layout_constraintStart_toStartOf="@+id/num_picker"
             app:layout_constraintTop_toBottomOf="@+id/num_picker" />
 
         <NumberPicker
             android:id="@+id/num_picker"
-            android:layout_width="200dp"
+            android:layout_width="90sp"
             android:layout_height="100dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView">
 
