--- a/app/src/main/res/layout/add_data_layout.xml
+++ b/app/src/main/res/layout/add_data_layout.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@drawable/dialog_background"
     android:backgroundTint="@color/gray"
+    android:orientation="vertical"
     android:padding="20dp">
 
     <TextView
@@ -25,92 +25,94 @@
         android:id="@+id/addfile_linearlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_below="@id/addfile_textView"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16dp"
+        android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/addfile_device_name_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Device Name"
-            android:ems="10"
-            android:inputType="textPersonName"
+            android:background="@drawable/button_background"
+            android:backgroundTint="@android:color/white"
             android:drawableStart="@drawable/ic_devices_grey_24dp"
             android:drawablePadding="16dp"
-            android:background="@drawable/button_background"
-            android:backgroundTint="@android:color/white"/>
+            android:ems="10"
+            android:hint="Device Name"
+            android:inputType="textPersonName" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/addfile_device_amps_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Device Amps"
-            android:ems="10"
-            android:inputType="number"
+            android:background="@drawable/button_background"
+            android:backgroundTint="@android:color/white"
             android:drawableStart="@drawable/ic_flash_auto_grey_24dp"
             android:drawablePadding="16dp"
-            android:background="@drawable/button_background"
-            android:backgroundTint="@android:color/white" />
+            android:ems="10"
+            android:hint="Device Amps"
+            android:inputType="number" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/addfile_device_volts_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Device Volts"
-            android:ems="10"
-            android:inputType="number"
+            android:background="@drawable/button_background"
+            android:backgroundTint="@android:color/white"
             android:drawableStart="@drawable/ic_flash_on_grey_24dp"
             android:drawablePadding="16dp"
-            android:background="@drawable/button_background"
-            android:backgroundTint="@android:color/white" />
+            android:ems="10"
+            android:hint="Device Volts"
+            android:inputType="number" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/addfile_device_hour_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Active Hours of usage per day"
-            android:ems="10"
-            android:inputType="number"
+            android:background="@drawable/button_background"
+            android:backgroundTint="@android:color/white"
             android:drawableStart="@drawable/ic_access_alarms_grey_24dp"
             android:drawablePadding="16dp"
-            android:background="@drawable/button_background"
-            android:backgroundTint="@android:color/white" />
+            android:ems="10"
+            android:hint="Active Hours of usage per day"
+            android:inputType="number" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/addfile_device_qty_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:ems="10"
-            android:hint="Qty"
-            android:inputType="number"
+            android:background="@drawable/button_background"
+            android:backgroundTint="@android:color/white"
             android:drawableStart="@drawable/ic_format_list_numbered_grey_24dp"
             android:drawablePadding="16dp"
-            android:background="@drawable/button_background"
-            android:backgroundTint="@android:color/white" />
+            android:ems="10"
+            android:hint="Qty"
+            android:inputType="number" />
 
     </LinearLayout>
-        <Button
-            android:id="@+id/addfile_btn"
-            android:text="Add Appliance"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="32dp"
-            android:background="@drawable/button"
-            android:backgroundTint="@color/colorAccent"
-            android:layout_below="@id/addfile_linearlayout"
-            android:elevation="2dp"
-            android:textColor="@color/white" />
+
+    <Button
+        android:id="@+id/addfile_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/addfile_linearlayout"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/button"
+        android:backgroundTint="@color/colorAccent"
+        android:elevation="2dp"
+        android:text="Add Appliance"
+        android:textColor="@color/white" />
+
     <ProgressBar
         android:id="@+id/addfile_progressbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone"/>
-    </RelativeLayout>
+        android:visibility="gone" />
+</RelativeLayout>
 
