--- a/app/src/main/res/layout/add_data_layout.xml
+++ b/app/src/main/res/layout/add_data_layout.xml
@@ -37,7 +37,7 @@
             android:backgroundTint="@android:color/white"
             android:drawableStart="@drawable/ic_devices_grey_24dp"
             android:drawablePadding="16dp"
-            android:ems="10"
+            android:textSize="14sp"
             android:hint="Device Name"
             android:inputType="textPersonName" />
 
@@ -50,7 +50,7 @@
             android:backgroundTint="@android:color/white"
             android:drawableStart="@drawable/ic_flash_auto_grey_24dp"
             android:drawablePadding="16dp"
-            android:ems="10"
+            android:textSize="14sp"
             android:hint="Device Amps"
             android:inputType="number" />
 
@@ -63,7 +63,7 @@
             android:backgroundTint="@android:color/white"
             android:drawableStart="@drawable/ic_flash_on_grey_24dp"
             android:drawablePadding="16dp"
-            android:ems="10"
+            android:textSize="14sp"
             android:hint="Device Volts"
             android:inputType="number" />
 
@@ -76,7 +76,7 @@
             android:backgroundTint="@android:color/white"
             android:drawableStart="@drawable/ic_access_alarms_grey_24dp"
             android:drawablePadding="16dp"
-            android:ems="10"
+            android:textSize="14sp"
             android:hint="Active Hours of usage per day"
             android:inputType="number" />
 
@@ -89,7 +89,7 @@
             android:backgroundTint="@android:color/white"
             android:drawableStart="@drawable/ic_format_list_numbered_grey_24dp"
             android:drawablePadding="16dp"
-            android:ems="10"
+            android:textSize="14sp"
             android:hint="Qty"
             android:inputType="number" />
 
