--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,8 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_action_clear_all"
+        android:id="@+id/main_menu_clear_all"
         android:title="@string/clear_all"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/main_menu_logout"
+        android:title="@string/logout"
+        android:icon="@drawable/ic_settings_power_black_24dp"/>
+    <item
+        android:id="@+id/main_menu_delete_account"
+        android:title="@string/delete_account"/>
 
 </menu>
