--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,6 +12,10 @@
         android:scaleType="centerCrop"
         android:alpha="0.6"/>
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,8 +27,22 @@
         android:layout_height="80dp"
         android:layout_gravity="center_horizontal"
         app:srcCompat="@drawable/sun"
-        android:layout_margin="48dp"/>
+        android:layout_margin="4dp"/>
 
+        <TextView
+            android:id="@+id/addfile_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
+            android:layout_below="@id/addfile_logo"
+            android:fontFamily="@font/oensansbold"
+            android:text="Login"
+            android:textAlignment="center"
+            android:textSize="22sp"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/login_activity_email_TextInputLayout"
@@ -108,5 +126,6 @@
         android:visibility="invisible" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.core.widget.NestedScrollView>
 
 </RelativeLayout>
