--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,8 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="86dp"
         app:fabSize="mini"
-        android:backgroundTint="@android:color/holo_green_light"
+        app:elevation="6dp"
+        app:backgroundTint="@android:color/holo_green_light"
         app:srcCompat="@drawable/ic_insert_chart_white_24dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
