--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -12,6 +12,9 @@
         android:scaleType="centerCrop"
         android:alpha="0.6"/>
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,11 +22,25 @@
         android:padding="32dp">
 
     <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="180dp"
+            android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="48dp"
+            android:layout_margin="4dp"
             app:srcCompat="@drawable/sun" />
+        <TextView
+            android:id="@+id/addfile_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
+            android:layout_below="@id/addfile_logo"
+            android:fontFamily="@font/oensansbold"
+            android:text="Register"
+            android:textAlignment="center"
+            android:textSize="22sp"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -121,6 +138,8 @@
             android:textSize="14sp" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.core.widget.NestedScrollView>
 
     <ProgressBar
         android:id="@+id/registration_activity_progressbar"
