--- a/app/src/main/res/layout/calculation_display_bottomsheet_layout.xml
+++ b/app/src/main/res/layout/calculation_display_bottomsheet_layout.xml
@@ -23,7 +23,8 @@
             android:text="@string/selene_solar_calculator"
             android:textColor="@android:color/white"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:fontFamily="@font/oensansbold"/>
 
         <TextView
             android:id="@+id/cal_display_textview"
@@ -32,7 +33,7 @@
             android:gravity="center_horizontal"
             android:text="Easy, Fast, Eco-Friendly"
             android:textColor="@android:color/white"
-            android:textSize="13sp" />
+            android:textSize="13sp"/>
 
 
     </LinearLayout>
@@ -45,7 +46,7 @@
         android:background="@android:color/white"
         android:orientation="vertical"
         android:layout_marginTop="8dp"
-        android:padding="16dp">
+        android:padding="8dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cal_display_cardview1"
@@ -68,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:padding="8dp"
-                    android:textSize="14sp"
+                    android:textSize="13sp"
                     android:textStyle="bold"
                     android:text="@string/total_watthour_of_appliances" />
 
@@ -78,7 +79,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:padding="8dp"
-                    android:textSize="14sp"
+                    android:textSize="13sp"
                     android:textStyle="bold"
                     tool:text="300Wh"
                     android:gravity=""/>
@@ -106,7 +107,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:padding="8dp"
-                    android:textSize="14sp"
+                    android:textSize="13sp"
                     android:textStyle="bold"
                     android:text="@string/recommended_solar_panel_power" />
 
@@ -116,7 +117,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:padding="8dp"
-                    android:textSize="14sp"
+                    android:textSize="13sp"
                     android:textStyle="bold"
                     tool:text="600Wh" />
             </LinearLayout>
@@ -143,7 +144,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:padding="8dp"
-                    android:textSize="14sp"
+                    android:textSize="13sp"
                     android:textStyle="bold"
                     android:text="@string/recommended_battery_capaity" />
 
@@ -153,7 +154,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:padding="8dp"
-                    android:textSize="14sp"
+                    android:textSize="13sp"
                     android:textStyle="bold"
                     tool:text="300Wh" />
             </LinearLayout>
