--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#30205E</color>
-    <color name="colorPrimaryDark">#30205E</color>
+    <color name="colorPrimaryDark">#2B1D55</color>
     <color name="colorAccent">#FC9000</color>
     <color name="white">#FFFFFF</color>
-    <color name="gray">#EFEFEF</color>
+    <color name="gray">#E4E4E4</color>
     <!--<color name="tint">#475ABE</color>-->
 </resources>
