Created About Activity

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -12,5 +12,8 @@
     <item
         android:id="@+id/main_menu_delete_account"
         android:title="@string/delete_account"/>
+    <item
+        android:id="@+id/about_the_team"
+        android:title="@string/about_the_team"/>
 
 </menu>
