--- a/app/src/main/res/layout/team_list.xml
+++ b/app/src/main/res/layout/team_list.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:id="@+id/dev_list"
-    android:paddingTop="20dp"
-    android:paddingBottom="20dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
     android:gravity="center"
@@ -16,13 +16,14 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="2dp"
-        app:cardCornerRadius="50dp">
+        android:outlineAmbientShadowColor="#E2E0E7"
+        app:cardElevation="1dp"
+        app:cardCornerRadius="25dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#E2E0E7"
+            android:background="#FFFFFF"
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
             android:paddingRight="10sp"
