Implemented Google SignIn

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -13,7 +13,7 @@
         android:id="@+id/main_menu_delete_account"
         android:title="@string/delete_account"/>
     <item
-        android:id="@+id/about_the_team"
+        android:id="@+id/Team_page"
         android:title="@string/about_the_team"/>
 
 </menu>
